# atom

./: Contenu_headers.txt  test.txt
doc/: config_example.txt
include/: Plasma.h  compare.h  mpi_shortcut.h  service_functions.h
src/: main.cu
src/core/: Plasma.cu  PlasmaInitializer.cu  gpucell.cu  kernels.cu  service_functions.cu
stage/: ALL_kernels.cu  ALL_kernels.h  CMakeLists.txt  Plasma.cu  kernels_cpu.cu  kernels_cpu.h  kernels_gpu.cu  kernels_gpu.h  wrappers.cu  wrappers.h
stage/cpp_Files/: gpucell.cpp  kernels.cpp
stage/header_Files/: archAPI.h  gpucell.h  kernels.h
